@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-06-17T08:28:48Z",
+  "timestamp" : "2022-06-17T16:33:22Z",
   "count_outdated" : 539,
   "uniques_outdated" : 305,
-  "count" : 642,
+  "count" : 643,
   "uniques" : 334,
   "clones" : [
     {
@@ -105,8 +105,8 @@
     },
     {
       "timestamp": "2022-06-17T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
