@@ -1,5 +1,5 @@
 {
-  "count": 103,
+  "count": 104,
   "uniques": 13,
   "clones": [
     {
@@ -74,7 +74,7 @@
     },
     {
       "timestamp": "2022-06-17T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
