@@ -1,3 +1,10 @@
+2022-06-17T16:33:22Z:
+* notice: last 14d: unq all: 13 104
+* notice: prev accum: outdated-unq outdated-all / unq all: 305 539 / 334 642
+* notice: next accum: outdated-unq outdated-all / unq all: 305 539 / 334 643
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-06-17]
+
 2022-06-17T08:28:48Z:
 * notice: last 14d: unq all: 13 103
 * notice: prev accum: outdated-unq outdated-all / unq all: 305 539 / 333 642
